# palindrome_tg_bot

./: CMakeLists.txt  README.md
src/: main.cpp
